# py-monorepo

./: .gitignore  README.md  pip-dev-requirements.txt  pyproject.toml
scripts/: code-format.ps1  code-lint.ps1  code-test.ps1  deps-hard-cleaner.ps1  deps-sync.ps1
services/service12/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml
