[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "monorepo"
version = "0.0.0"
description = "A monorepo in python using poetry"
authors = ["Rafael Caetano Pinto <barenko@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipython = "8.27.0"
pyright = "1.1.380"
ruff = "0.6.4"
pytest = "8.3.3"
pytest-cov = "5.0.0"
factory-boy = "3.3.1"

[tool.pyright]
exclude = ["**/__pycache__"]
reportMissingImports = "error"
venvPath = "."
venv = ".venv"

[tool.ruff]
#extend-exclude = ['migrations', 'docs']

[tool.ruff.lint]
#select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
#quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
